syntax = 'proto3';

//import "google/protobuf/timestamp.proto";
import "thirdparty/protobuf/google/protobuf/timestamp.proto";

// TODO(doug) - refactor package
package bu.vip.kinect.controller.data;

option java_package = "edu.bu.vip.kinect.controller.data";
option java_outer_classname = "Protos";

message Session {
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp date_created = 3;
  repeated Recording recordings = 4;
}

message Recording {
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp date_created = 3;
}
